# python-template

./: .gitignore  LICENSE  README.md  copier.yml  pyproject.toml
template/: .pre-commit-config.yaml.jinja  CHANGELOG.md.jinja  Makefile.jinja  README.md.jinja  pyproject.toml.jinja
template/.github/workflows/: ci.yml.jinja  release.yml.jinja
template/tests/: test_{{project_slug}}.py.jinja
template/{{project_slug}}/: __init__.py.jinja
