[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "copier>=9.15.1",
    "pre-commit>=4.6.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.15",
]
